--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "gh-pages": "^2.2.0",
     "npm-watch": "^0.6.0"
   },
-  "homepage": "https://github.com/Harryki/weather_on_your_route"
+  "homepage": "https://harryki.github.io/weather_on_your_route/"
 }
